k8s-deployment/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    service: frontend
spec:
  selector:
    matchLabels:
      service: frontend
  replicas: 2
  template:
    metadata:
      labels:
        service: frontend
    spec:
      containers:
        - name: frontend
          image: xinbinhuang/ud-frontend:1.0.0
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
      restartPolicy: Always
