k8s-deployment/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    service: frontend
spec:
  selector:
    service: frontend
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
